# burn-the-stock

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml  pyrefly.toml
crates/downloader/: Cargo.toml
crates/downloader/src/: main.rs
crates/portfolio/: Cargo.toml
crates/portfolio/src/: engine.rs  lib.rs  metrics.rs  pricing.rs  report.rs  types.rs
crates/stock-client/: Cargo.toml
crates/stock-client/src/: client.rs  error.rs  fugle.rs  lib.rs  market_data.rs  sim_stock.rs  twse.rs  types.rs  urls.rs  yahoo.rs
crates/stock-client/tests/: api.rs  fugle.rs  sim_stock.rs
crates/stock-client/tests/common/: mod.rs
crates/stock-data/: Cargo.toml
crates/stock-data/src/: lib.rs  read.rs  refresh.rs  schema.rs
crates/stock-model/: Cargo.toml
crates/stock-model/src/: class.rs  data.rs  features.rs  inference.rs  lib.rs  model.rs  strategy.rs
crates/stock-portfolio/: Cargo.toml
crates/stock-portfolio/src/: engine.rs  lib.rs  types.rs
crates/tickers/: Cargo.toml
crates/tickers/src/: main.rs
crates/trader/: Cargo.toml
crates/trader/src/: calendar.rs  cli.rs  download.rs  execute.rs  main.rs  plan.rs  quotes.rs  rank.rs  report.rs  state.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: batcher.rs  cli.rs  dataloader.rs  dataset.rs  inference.rs  label.rs  link.rs  logging.rs  main.rs  metric.rs  model.rs  portfolio.rs  report.rs  store.rs  training.rs
crates/trainer/src/command/: backtest.rs  eval.rs  mod.rs  predict.rs  train.rs
crates/trainer/src/data/: label.rs  mod.rs  store.rs
crates/trainer/src/portfolio/: engine.rs  metrics.rs  mod.rs  pricing.rs  report.rs  types.rs
crates/trainer/src/training/: batcher.rs  dataset.rs  link.rs  metric.rs  mod.rs  model.rs  pipeline.rs  runner.rs
python/src/burn_the_stock/: __init__.py  aggregate.py  display.py  downloader.py  labels.py  log.py  logging.py  preview.py  quotes.py  schema.py
python/tests/: __init__.py  test_aggregate.py  test_downloader.py  test_labels.py  test_quotes.py
report/: README.md  exploit-equity.csv  honest-equity.csv  plot_equity.py
