[workspace]
resolver = "2"
members = [
  "crates/stock-client",
  "crates/trader",
  "crates/trainer",
]

[workspace.dependencies]
burn = { version = "0.21.0", default-features = false }
chrono = { version = "0.4.44", default-features = false }
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
miette = "7.6.0"
reqwest = { version = "0.13.3", default-features = false }
serde = "1.0.228"
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false }

[workspace.lints.clippy]
pedantic = "warn"
assertions_on_result_states = "warn"
