[workspace]
resolver = "2"
members = [
  "crates/stock-client",
  "crates/stock-data",
  "crates/stock-model",
  "crates/stock-portfolio",
  "crates/trader",
  "crates/trainer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Stanley5249/burn-the-stock"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
burn = { version = "0.21.0", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = "4.6.1"
dotenvy = "0.15.7"
futures = { version = "0.3", default-features = false, features = ["std"] }
miette = "7.6.0"
polars = "0.54"
reqwest = { version = "0.13.3", default-features = false }
serde = "1.0.228"
tokio = { version = "1.52.3", default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false }
url = "2.5.7"

[workspace.lints.clippy]
assertions_on_result_states = "warn"
pedantic = "warn"

[profile.dev.package."*"]
debug = 0

[profile.release]
strip = "debuginfo"
panic = "abort"
