[project]
name = "burn-the-stock"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.0",
  "pandas>=3.0.3",
  "polars>=1.41.0",
  "pydantic>=2.13.4",
  "python-dotenv>=1.2.2",
  "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["python/src"]
testpaths = ["python/tests"]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "T20", "DOC201"]

[tool.ruff.lint.extend-per-file-ignores]
"python/tests/**" = ["S101", "PLR2004", "RUF069"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.build-backend]
module-root = "python/src"
module-name = "burn_the_stock"
