[package]
name = "stock-client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["clock", "serde", "std"] }
dotenvy.workspace = true
futures.workspace = true
miette.workspace = true
reqwest = {
  workspace = true,
  features = ["default-tls", "cookies", "form", "json"]
}
scraper = "0.27.0"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[lints]
workspace = true
