[package]
name = "stock-client"
version.workspace = true
edition.workspace = true
description = "HTTP clients for Taiwan stock data sources and the sim_stock platform"
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true, features = ["clock", "serde", "std"] }
miette.workspace = true
reqwest = {
  workspace = true,
  features = ["default-tls", "cookies", "form", "json"]
}
scraper = "0.27.0"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
tokio-retry = "0.3.2"
tracing.workspace = true
url.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[lints]
workspace = true
