[package]
name = "stock-model"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { workspace = true, features = ["std"] }
chrono = { workspace = true }
miette = { workspace = true }
polars = {
  workspace = true,
  features = [
    "dtype-array",
    "dtype-date",
    "lazy",
    "log",
    "parquet",
    "partition_by",
    "performant",
    "strings"
  ]
}
stock-data = { path = "../stock-data" }
tracing = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["flex", "std"] }

[lints]
workspace = true
