[package]
name = "stock-model"
version.workspace = true
edition.workspace = true
description = "Burn neural network model and feature engineering for stock ranking"
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
burn = { workspace = true, features = ["std"] }
chrono = { workspace = true }
miette = { workspace = true }
polars = {
  workspace = true,
  features = [
    "dtype-array",
    "dtype-date",
    "lazy",
    "log",
    "parquet",
    "partition_by",
    "performant",
    "strings"
  ]
}
stock-data = { path = "../stock-data" }
tracing = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["flex", "std"] }

[lints]
workspace = true
