[package]
name = "tickers"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
miette = { workspace = true, features = ["fancy"] }
polars = { workspace = true, features = ["lazy", "parquet"] }
reqwest = { workspace = true, features = ["default-tls"] }
stock-client = { path = "../stock-client" }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[lints]
workspace = true
