[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[dependencies]
stock-client = { path = "../stock-client" }
stock-model = { path = "../stock-model" }

burn = { workspace = true, features = ["std"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
polars = { workspace = true, features = ["dtype-date", "lazy"] }

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]

[lints]
workspace = true
