[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[dependencies]
portfolio = { path = "../portfolio" }
stock-client = { path = "../stock-client" }
stock-model = { path = "../stock-model" }

burn = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["clock", "serde"] }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
polars = { workspace = true, features = ["dtype-date", "lazy", "parquet"] }
reqwest = { workspace = true, features = ["default-tls", "form", "json", "query"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]

[lints]
workspace = true
