[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[dependencies]
portfolio = { path = "../portfolio" }
stock-client = { path = "../stock-client" }
stock-model = { path = "../stock-model" }

burn = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["clock", "serde"] }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
futures = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
polars = { workspace = true, features = ["dtype-date", "lazy", "parquet"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]

[lints]
workspace = true
