[package]
name = "trainer"
version = "0.1.0"
edition = "2024"

[dependencies]
stock-client = { path = "../stock-client" }
stock-model = { path = "../stock-model" }

burn = {
  workspace = true,
  features = ["autotune", "flex", "fusion", "std", "train", "tui"]
}
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
fastrand = "2.4.1"
miette = { workspace = true, features = ["fancy"] }
polars = {
  workspace = true,
  features = [
    "csv",
    "dtype-array",
    "dtype-date",
    "lazy",
    "log",
    "parquet",
    "partition_by",
    "performant",
    "strings"
  ]
}
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = {
  workspace = true,
  features = ["env-filter", "fmt", "std"]
}

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]

[lints]
workspace = true
