[package]
name = "trainer"
version.workspace = true
edition.workspace = true
description = "Train and backtest the stock ranking model"
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
stock-model = { path = "../stock-model" }
stock-portfolio = { path = "../stock-portfolio" }

burn = {
  workspace = true,
  features = ["autotune", "flex", "fusion", "std", "train", "tui"]
}
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
fastrand = "2.4.1"
miette = { workspace = true, features = ["fancy"] }
polars = {
  workspace = true,
  features = [
    "csv",
    "dtype-array",
    "dtype-date",
    "lazy",
    "log",
    "parquet",
    "partition_by",
    "performant",
    "rolling_window",
    "strings"
  ]
}
tracing.workspace = true
tracing-subscriber = {
  workspace = true,
  features = ["env-filter", "fmt", "std"]
}

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]

[lints]
workspace = true
